Create button to add a new Book to the library

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <div class="grid-container" id="container"></div>
+  <button type="button" id="new-book">Add new book</button>
 <script src="js/library.js"></script>
 </body>
 
